Revision history for Modern::Perl

1.03    Wed Feb 18 00:40:40 UTC 2009
    - removed duplicate use lines (Damien Learns Perl)
    - fixed (hopefully) v-string warnings (Damien, David Moreno)
    - enabled C3 MRO (Evan Carroll)

1.02    Tue Jan 27 03:44:29 UTC 2009
    - removed the current need for B::Hooks::Parser (suggested by chocolateboy)

1.01    Tue Jan 27 01:11:48 UTC 2009
    - fixed a documentation typo reported by Vasily Chekalkin
    - added caveats to the documentation per bug report from Ben Hengst

1.00    Mon Jan 26 22:41:28 UTC 2009
    - First version, released on an unsuspecting world.