@@ -1,0 +1,40 @@
+name             = Modern-Perl
+author           = chromatic
+license          = Perl_5
+copyright_holder = chromatic@wgz.org
+copyright_year   = 2012
+
+[AutoVersion]
+format = {{ cldr('1.yyyyMMdd') }}
+
+[AutoPrereqs]
+
+[Prereqs]
+perl = 5.010
+
+[@Filter]
+-bundle = @Basic
+-remove = Readme
+
+[PodWeaver]
+finder = :InstallModules
+
+[PkgVersion]
+[PodVersion]
+[NextRelease]
+[ModuleBuild]
+
+[@Git]
+changelog   = Changes             ; this is the default
+allow_dirty = dist.ini            ; see Git::Check...
+allow_dirty = Changes             ; ... and Git::Commit
+commit_msg  = v%v%n%n%c           ; see Git::Commit
+tag_format  = %v                  ; see Git::Tag
+tag_message = %v                  ; see Git::Tag
+push_to     = origin              ; see Git::Push
+
+[MetaResources]
+homepage          = https://github.com/chromatic/Modern-Perl
+repository.url    = https://github.com/chromatic/Modern-Perl.git
+repository.web    = https://github.com/chromatic/Modern-Perl
+repository.type   = git
